[package]
name = "reactivate"
version = "0.3.1"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "Thread Safe Reactive Data Structure. Made with ❤️ for 🦀"
license = "MIT"
repository = "https://github.com/zahash/reactivate"

[dependencies]
paste = "1"
rayon = { version = "1", optional = true }

[features]
parallel-notification = ["dep:rayon"]
